src/styles/Home.module.css
.main {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  min-height: 100vh;
}

.main header,
.main article {
  text-align: center;
  padding: 1rem;
  padding-bottom: 2em;
}

.socialBar {
  display: flex;
  justify-content: center;
}
.socialBar a {
  padding: 1rem 0.4rem;
}
.socialBar a svg {
  height: 44px;
}

.main img {
  width: 300px;
  height: 200px;
  object-fit: cover;
}
.main h1 {
  display: none;
}
.main h2 {
  font-size: 2rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-bottom: 0.5rem;
}
.main h3,
.main cite {
  font-size: 1rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-bottom: 0.5rem;
}

.main cite {
  font-style: normal;
  font-weight: bold;
}

.main h4 {
  font-size: 1rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-bottom: 0.5rem;
  font-weight: normal;
  font-style: italic;
}

.main p,
.main quote {
  font-size: 0.8rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-bottom: 0.2rem;
}

.main button {
  font-size: 0.8rem;
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
  padding: 0.75rem 2.5rem;
  background: rgba(29, 63, 100, 0.04);
  color: white;
  border: white solid 0.1rem;
  border-radius: 2rem;
}

.main .desktop {
  display: none;
}
.main .scrollingWrapper {
  display: flex;
  flex-wrap: nowrap;
  overflow-x: scroll;
  justify-content: flex-start;
  width: 100vw;
}
.main .scrollingWrapper section {
  margin-left: 1em;
  min-width: 170px;
}
.main .scrollingWrapper .long {
  min-width: 350px;
}
.main .scrollingWrapper .short {
  min-width: 150px;
}
.main .scrollingWrapper section {
  display: flex;
  flex-direction: column;
}

.main .scrollingWrapper section cite,
.main .scrollingWrapper section h4 {
  text-align: right;
}
.main .scrollingWrapper section .left {
  text-align: left;
}
.main .about .inner,
.main .mainPortfolio .inner {
  color: rgb(var(--background-start-rgb));
  background: white;
  z-index: 2;
}
.main .inner button {
  background: rgb(var(--background-start-rgb));
}
.main div.border {
  height: 160px;
  margin-top: -5em;
  z-index: 1;
}
.main div.border svg {
  fill: white;
  width: 100vw;
}
.main .about .inner h3 {
  color: rgb(64, 107, 153);
}
.main .testimonies {
  margin-bottom: 3rem;
}
.main .goal {
  margin: 1.5rem;
  margin-top: 4rem;
  margin-bottom: 7rem;
  display: flex;
}
.main .goal h2 {
  font-size: 3rem;
}

.main .goal h3 {
  text-align: left;
  font-weight: 100;
}

.main .portfolioGrid {
  padding-bottom: 5rem;
}

.main .portfolioGrid .grid {
  padding: 5px;
  margin-bottom: 10px;
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.14);
}
.main .portfolioGrid .grid h3 {
  max-width: 300px;
}
.main footer {
  text-align: center;
}
.main footer nav {
  display: flex;
  flex-direction: column;
}
.main footer nav a {
  padding-bottom: 0.5em;
}

.portfolioGrid {
  display: flex;
  flex-direction: column;
}

/* LARGE Mobile to tablet */
@media (min-width: 400px) {
  .main header,
  .main article {
    padding-left: 3rem;
    padding-right: 3em;
    padding-bottom: 3em;
  }
  .main div.border {
    height: 190px;
  }
  .main h3 {
    padding-bottom: 1.5rem;
  }
  .main .portfolioGrid {
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
  }
  .main .portfolioGrid .grid {
    max-width: 50vw;
  }
}
@media (min-width: 500px) {
  .main div.border {
    height: 225px;
  }
}
@media (min-width: 700px) {
  .main div.border {
    height: 300px;
  }
}
@media (min-width: 850px) {
  .main div.border {
    height: 380px;
  }
}
/* Desktop */
@media (min-width: 1000px) {
  .main div.border {
    height: 10vw;
  }
  .main header,
  .main article,
  .main .inner {
    padding-left: 8rem;
    padding-right: 8em;
    padding-bottom: 6em;
    text-align: left;
  }
  .main h2,
  .main p {
    padding-left: 0;
  }
  .main .desktop {
    display: flex;
  }
  .main menu.desktop {
    justify-content: space-between;
  }
  .main nav menu.desktop div {
    margin-top: 2em;
  }
  .main nav menu.desktop a.links {
    padding-right: 2em;
  }
  .main menu.desktop button {
    margin-top: 0;
    margin-bottom: 0;
  }
  .mobile {
    display: none;
  }
  .main header .content {
    display: flex;
    flex-direction: row-reverse;
  }
  .main header .content aside {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
  }

  .main .scrollingWrapper {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    overflow-x: none;
    justify-content: space-between;
    width: unset;
  }
  .main .scrollingWrapper section {
    margin-left: 0;
    width: 45%;
  }
  .main .mainPortfolio .inner header {
    padding-left: 0;
    padding-right: 0;
    padding-bottom: 2em;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }
  .main .mainPortfolio .goal {
    display: fle;
    flex-direction: row;
    justify-content: center;
  }
  .main .mainPortfolio .goal h2 {
    padding: 0;
  }
  .main .mainPortfolio .goal h3 {
    padding: 1em;
  }
  .main footer nav {
    flex-direction: row;
    justify-content: space-around;
    min-width: 40vw;
  }
}
@media (max-width: 600px) {
  .main .portfolioGrid {
    flex-direction: column;
  }
  .main .portfolioGrid .grid {
    max-width: unset;
  }
}
@media (max-width: 350px) {
  .main .border {
    display: none;
  }
  .main article {
    padding: 0;
  }
  .main .about h2,
  .main .testimonies h2,
  .main footer {
    padding-top: 1rem;
  }
  .main .about p {
    padding-bottom: 1rem;
  }
}
@media (prefers-color-scheme: dark) {
}

@keyframes rotate {
  /* from {
    transform: rotate(360deg);
  }
  to {
    transform: rotate(0deg);
  } */
}

